--- a/css/main.css
+++ b/css/main.css
@@ -79,12 +79,13 @@
 }
 
 /*BUTTON ================ */
-.container #btnRestart {
+.container #btn-restart {
     cursor:pointer;
     background: var(--blue);
     color: var(--white);
     padding: 1rem;
     margin-top: 3%;
+    margin-bottom: 3%;
     font-size: 1.3rem;
     box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.2);
     transition:0.2s ease-in-out;
@@ -92,7 +93,7 @@
     display: none;
 }
 
-.container #btnRestart:hover {
+.container #btn-restart:hover {
     background: var(--white);
     color:var(--blue);
 }
